# TVDesktop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: tvdesktop.desktop.in
src/: gadgets.cpp  gadgets.h  main.cpp  main.h  pch.h  utils.cpp  utils.h
